hphp/test/zend/good/ext-standard-array/bug38464.php
<?php
$array = array('-000', ' 001', 1, ' 123', '+123');
var_dump(array_count_values($array));
?>